--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
             <div class="modal-dialog rounded-top">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 v-if="showCart" class="modal-title">Varukorg</h5>
-                        <h5 v-else class="modal-title">Produktinformation</h5>
-                        <button type="button" class="btn" @click="hideModal()" aria-label="Close">
+                        <h5 v-if="modalView == 'cart'" class="modal-title">Varukorg</h5>
+                        <h5 v-else-if="modalView == 'product'" class="modal-title">Produktinformation</h5>
+                        <h5 v-else-if="modalView == 'finish'" class="modal-title">Slutför</h5>
+                        <button type="button" class="ms-auto btn" @click="hideModal()" aria-label="Close">
                             <i class="bi bi-chevron-down"></i>
                         </button>
                     </div>
                     <div class="modal-body p-4">
-                        <div v-if="showCart">
+                        <div v-if="modalView == 'cart'">
                             <table v-if="cart.length" class="table">
                                 <thead>
                                     <tr>
@@ -144,7 +145,7 @@
                                     <tr v-for="item in cart" :key="item.id">
                                         <td>{{ item.id }}</td>
                                         <td>{{ item.title }}</td>
-                                        <td>{{ item.price }}</td>
+                                        <td>{{ item.price }} kr</td>
                                         <td>{{ item.amount }}</td>
                                         <td>
                                             <button @click="removeFromCart(item)" type="button" class="close">
@@ -155,7 +156,7 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div v-else>
+                        <div v-else-if="modalView == 'product'">
                             <div v-if="selectedItem">
                                 <img class="mb-3" :src="selectedItem.image" :alt="selectedItem.title">
                                 <h5>{{ selectedItem.title }}</h5>
@@ -163,15 +164,31 @@
                                 <h2>{{ selectedItem.price }} kr</h2>
                             </div>
                         </div>
+
+                        <div v-else-if="modalView == 'finish'" class="text-center">
+                            <h3>Ange ditt telefonnummer:</h3>
+                            <input type="text" class="form-control rounded-pill" placeholder="Telefonnummer">   
+                        </div>
+
+                        <div v-else-if="modalView == 'success'" class="text-center">
+                            <h3>Tack för din beställning!</h3>
+                            <p>En bekräftelse kommer att skickas via SMS.</p>
+                        </div>
                     </div>
 
-                    <div v-if="showCart" class="modal-footer">
-                        <button :disabled="!cart.length" type="button" class="btn btn-success rounded-pill w-100" @click="submitOrder">Skicka beställning</button>
-                    </div>
-
-                    <div v-else class="modal-footer">
-                        <button type="button" class="btn btn-success rounded-pill w-100" @click="addToCart(selectedItem)">
+                    <div class="modal-footer">
+                        <button v-if="modalView == 'cart'" :disabled="!cart.length" type="button" class="btn btn-success rounded-pill w-100" @click="modalView = 'finish'">Skicka beställning</button>
+             
+                        <button v-if="modalView == 'product'" type="button" class="btn btn-success rounded-pill w-100" @click="addToCart(selectedItem)" >
                             Lägg i varukorg
+                        </button>
+
+                        <button v-if="modalView == 'finish'" type="button" class="btn btn-success rounded-pill w-100" @click="submitOrder">
+                            Bekräfta
+                        </button>
+
+                        <button v-if="modalView == 'success'" type="button" class="btn btn-success rounded-pill w-100" @click="hideModal">
+                            Stäng
                         </button>
                     </div>
 
@@ -205,7 +222,7 @@
                     currentPage: 'start',
                     selectedMarket: null,
                     cart: [],
-                    showCart: false,
+                    modalView: 'product',
                     topVisible: true,
                     bottomVisible: true,
                     articles: [
@@ -321,10 +338,10 @@
                     }, 500)
                 },
                 openModal(item) {
-                    this.showCart = true
+                    this.modalView = 'cart'
 
                     if (item) {
-                        this.showCart = false
+                        this.modalView = 'product'
                         this.selectedItem = item
                     }
 
@@ -347,8 +364,7 @@
                 },
                 submitOrder() {
                     if (confirm("Är du säker på att du vill beställa? Din varukorg kommer att tömmas.")) {
-                        alert("Tack för din beställning!")
-                        this.myModal.hide()
+                        this.modalView = 'success'
                         this.cart = []
                     } else {
                         // User canceled the confirmation
