--- a/index.html
+++ b/index.html
@@ -332,6 +332,16 @@
                 }
             },
             methods: {
+                testAPI() { // Testing Graph API after login.  See statusChangeCallback() for when this call is made.
+                    console.log('Welcome!  Fetching your information.... ')
+
+                    FB.api('/me', function(response) {
+                        console.log('Successful login for: ' + response.name)
+
+                        document.getElementById('status').innerHTML =
+                            'Thanks for logging in, ' + response.name + '!'
+                    })
+                },
                 statusChangeCallback(response) {  // Called with the results from FB.getLoginStatus().
                     console.log('statusChangeCallback')
                     console.log(response) // The current login status of the person.
