--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <!-- <div class="input-group-prepend">
                                 <button class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
                             </div> -->
-                        <input type="text" class="search form-control rounded-3" placeholder="Sök vara">
+                        <input type="text" class="form-control rounded-pill px-3" placeholder="Sök vara">
                     </div>
                 </form>
 
