--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                             <h3>Tack för din beställning!</h3>
                             <p>En bekräftelse kommer att skickas via SMS.</p>
                             <button @click.prevent="facebookLogin()" type="button" class="btn btn-basic rounded-pill mt-4 px-3">
-                                <i class="bi bi-facebook me-2"></i>Logga ut
+                                Logga ut
                             </button>
                         </div>
                     </div>
